big-card implementado

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,27 @@
-<p>big-card works!</p>
+<div class="container_big-card">
+
+    <div class="big-card__photo">
+        <img src="https://i.stack.imgur.com/luaq2.png" alt="imagem" height="200px">
+
+    </div>
+
+
+    <div class="big-card__title">
+
+        <h1> <a href="#">Saiu a nova versão do Angular</a></h1>
+
+    </div>
+
+    <div class="big-card__description">
+        <p>
+            <a href="#">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis asperiores eos aliquid, accusamus commodi
+                ab
+                doloribus officia amet sunt laudantium pariatur quo aliquam ipsam ullam incidunt id dolore similique
+                recusandae!
+            </a>
+        </p>
+
+    </div>
+
+</div>
