small-card implementado

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,7 +1,8 @@
 <div class="container_big-card">
 
     <div class="big-card__photo">
-        <img src="https://i.stack.imgur.com/luaq2.png" alt="imagem" height="200px">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLXYIBkTb14LZIZaoZqGKn5qgjZqvV2-WxbQ&usqp=CAU"
+            alt="imagem" height="200px">
 
     </div>
 
