--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,6 +7,10 @@
     </div>
 
     <div class="articles_others">
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
+
 
     </div>
 
