--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,10 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li><a href="https://www.linkedin.com/in/adriel-vinicius-04a389136/">Linkedin</a></li>
+        <li> <span>°</span></li>
+        <li><a href="https://github.com/adriel1234">Github</a></li>
+        <li> <span>°</span></li>
+        <li><a href="https://adriel1234.github.io/cv/">CV</a></li>
+    </ul>
+
+</div>
