Deixando conteudo dinamico

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,25 +1,21 @@
 <div class="container_big-card">
 
     <div class="big-card__photo">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLXYIBkTb14LZIZaoZqGKn5qgjZqvV2-WxbQ&usqp=CAU"
-            alt="imagem" height="200px">
+        <img src="{{photoCover}}" alt="imagem" height="200px">
 
     </div>
 
 
     <div class="big-card__title">
 
-        <h1> <a href="#">Saiu a nova versão do Angular</a></h1>
+        <h1> <a href="#">{{cardTitle}}</a></h1>
 
     </div>
 
     <div class="big-card__description">
         <p>
             <a href="#">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis asperiores eos aliquid, accusamus commodi
-                ab
-                doloribus officia amet sunt laudantium pariatur quo aliquam ipsam ullam incidunt id dolore similique
-                recusandae!
+                {{cardDescription}}
             </a>
         </p>
 
