--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,14 +7,25 @@
 
 <div class="container__articles">
     <div class="articles_main">
-        <app-big-card></app-big-card>
+        <app-big-card
+            photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLXYIBkTb14LZIZaoZqGKn5qgjZqvV2-WxbQ&usqp=CAU"
+            cardTitle="Novo Filme Homem de ferro" cardDescription="Marvel studios anuncia novo filme"></app-big-card>
 
+        <app-big-card
+            photoCover="https://viciados.net/wp-content/uploads/2022/10/Homem-Aranha-4-UCM-Spider-Man-2023.webp"
+            cardTitle="NNovidade homem aranha"
+            cardDescription="Marvel studios anuncia novo filme Homem aranha"></app-big-card>
     </div>
 
     <div class="articles_others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+            photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+            cardTitle="NOVA SERIE ANUNCIADA"></app-small-card>
+        <app-small-card photoCover="https://img.ibxk.com.br/2021/06/03/03024733248535.jpg?ims=328x"
+            cardTitle="NOVO JOGO ANUNCIADO"></app-small-card>
+        <app-small-card
+            photoCover="https://media.seudinheiro.com/cdn-cgi/image/fit=contain,width=715&,format=auto/uploads/2023/02/Guardians-of-the-Galaxy-Vol.-3-715x402.jpg"
+            cardTitle="GUARDIÕES DA GALAXIA NOVO FILME"></app-small-card>
 
 
     </div>
